# cross

./: README.md
android/: AndroidManifest.xml.in  CMakeLists.txt
android/res/layout/: main.xml
android/src/java/com/shaidin/cross/: MainActivity.java
ios/: CMakeLists.txt  Info.plist  ipa.plist
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/src/: CrossUIApp.swift  CrossUIView.swift  WebView.swift
linux/: CMakeLists.txt  main.cpp  web_view.cpp  web_view.h
linux/icon/: CMakeLists.txt
web/: CMakeLists.txt
windows/: CMakeLists.txt  framework.h  main.cpp  res.rc  web.cpp  web.h
windows/icon/: CMakeLists.txt
